[gd_scene load_steps=20 format=3 uid="uid://db2snd8qv16mh"]

[ext_resource type="Script" path="res://Scripts/Pages/WeaponSelection.gd" id="1_7d3tu"]
[ext_resource type="Texture2D" uid="uid://bnxavulveq3s7" path="res://Assets/Selections/SelectionBackground.jpg" id="2_4bayq"]
[ext_resource type="Texture2D" uid="uid://isvp0renddkg" path="res://Assets/Weapons/Pumpgun/Model.png" id="5_elteh"]
[ext_resource type="Texture2D" uid="uid://cuxjt3togmjxc" path="res://Assets/Weapons/Skills/Spells/fire_spell.png" id="5_ohg11"]
[ext_resource type="Texture2D" uid="uid://beoc17h154l45" path="res://Assets/Weapons/Skills/Spells/mana_replenish.png" id="6_cqolp"]
[ext_resource type="Texture2D" uid="uid://bywm8ugx323pk" path="res://Assets/Weapons/Skills/Spells/lightning_spell.png" id="7_tjfkq"]
[ext_resource type="Texture2D" uid="uid://ddslcfc3vga2m" path="res://Assets/Weapons/MagicWand/Model.png" id="8_bu2bo"]
[ext_resource type="Texture2D" uid="uid://d2bnuq3ymqvan" path="res://Assets/Weapons/Skills/Spells/summoning_spell.png" id="8_s26np"]
[ext_resource type="Texture2D" uid="uid://dir6x6qg4wiyu" path="res://Assets/Weapons/Ak47/Model.png" id="9_uak8l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nf40"]
bg_color = Color(0.443137, 0.443137, 0.443137, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_6yvkf"]
font_size = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5176"]
bg_color = Color(0.443137, 0.443137, 0.443137, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoqli"]
atlas = ExtResource("8_bu2bo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bou1q"]
atlas = ExtResource("9_uak8l")
region = Rect2(0, 0, 32, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wlhq"]
atlas = ExtResource("5_elteh")
region = Rect2(0, 0, 32, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_lyaat"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoqli")
}],
"loop": true,
"name": &"Weapon1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bou1q")
}],
"loop": true,
"name": &"Weapon2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wlhq")
}],
"loop": true,
"name": &"Weapon3",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2vie"]
bg_color = Color(0.443137, 0.443137, 0.443137, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjs0i"]
bg_color = Color(0.443137, 0.443137, 0.443137, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ButtonGroup" id="ButtonGroup_wr7pe"]

[node name="WeaponSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7d3tu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_4bayq")
expand_mode = 1

[node name="Next" type="Button" parent="."]
layout_mode = 0
offset_left = 1037.0
offset_top = 51.0
offset_right = 1119.0
offset_bottom = 80.0
theme_override_styles/normal = SubResource("StyleBoxFlat_0nf40")
action_mode = 0
text = "Next
"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 440.0
offset_top = 44.0
offset_right = 704.0
offset_bottom = 93.0
grow_vertical = 2
size_flags_horizontal = 6
text = "Waffen Auswahl"
label_settings = SubResource("LabelSettings_6yvkf")
metadata/_edit_use_anchors_ = true

[node name="Decider" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 350.0
offset_top = 321.0
offset_right = 781.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_w5176")
metadata/_edit_use_anchors_ = true

[node name="WeaponSelect" type="Control" parent="."]
anchors_preset = 0

[node name="WeaponSelect" type="AnimatedSprite2D" parent="WeaponSelect"]
position = Vector2(564, 204)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_lyaat")
animation = &"Weapon3"

[node name="WeaponLeftButton" type="Button" parent="WeaponSelect"]
layout_mode = 0
offset_left = 427.0
offset_top = 185.0
offset_right = 483.0
offset_bottom = 229.0
theme_override_styles/normal = SubResource("StyleBoxFlat_o2vie")
action_mode = 0
text = "Left"

[node name="WeaponRightButton" type="Button" parent="WeaponSelect"]
layout_mode = 0
offset_left = 653.0
offset_top = 186.0
offset_right = 709.0
offset_bottom = 230.0
theme_override_styles/normal = SubResource("StyleBoxFlat_jjs0i")
action_mode = 0
text = "Right"

[node name="SkillsSelect" type="Control" parent="."]
anchors_preset = 0
offset_left = 395.0
offset_top = 385.0
offset_right = 743.0
offset_bottom = 478.0

[node name="SkillContainer" type="GridContainer" parent="SkillsSelect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 5

[node name="Skill1" type="Button" parent="SkillsSelect/SkillContainer"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_wr7pe")

[node name="TextureRect" type="TextureRect" parent="SkillsSelect/SkillContainer/Skill1"]
layout_mode = 0
offset_right = 55.0
offset_bottom = 55.0
texture = ExtResource("5_ohg11")

[node name="Skill2" type="Button" parent="SkillsSelect/SkillContainer"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_wr7pe")

[node name="TextureRect" type="TextureRect" parent="SkillsSelect/SkillContainer/Skill2"]
layout_mode = 0
offset_right = 55.0
offset_bottom = 55.0
texture = ExtResource("6_cqolp")

[node name="Skill3" type="Button" parent="SkillsSelect/SkillContainer"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_wr7pe")

[node name="TextureRect" type="TextureRect" parent="SkillsSelect/SkillContainer/Skill3"]
layout_mode = 0
offset_right = 55.0
offset_bottom = 55.0
texture = ExtResource("7_tjfkq")

[node name="Skill4" type="Button" parent="SkillsSelect/SkillContainer"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_wr7pe")

[node name="TextureRect" type="TextureRect" parent="SkillsSelect/SkillContainer/Skill4"]
layout_mode = 0
offset_right = 55.0
offset_bottom = 55.0
texture = ExtResource("8_s26np")

[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="WeaponSelect/WeaponLeftButton" to="." method="_on_weapon_left_button_pressed"]
[connection signal="pressed" from="WeaponSelect/WeaponRightButton" to="." method="_on_weapon_right_button_pressed"]
[connection signal="focus_entered" from="SkillsSelect/SkillContainer/Skill1" to="." method="_on_skill_1_focus_entered"]
[connection signal="focus_entered" from="SkillsSelect/SkillContainer/Skill2" to="." method="_on_skill_2_focus_entered"]
[connection signal="focus_entered" from="SkillsSelect/SkillContainer/Skill3" to="." method="_on_skill_3_focus_entered"]
[connection signal="focus_entered" from="SkillsSelect/SkillContainer/Skill4" to="." method="_on_skill_4_focus_entered"]
